--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Vittal Resume</title>
     <link href="css/style.css" rel="stylesheet">
-    <script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyA8hsBzXC2XahwLAtKvYHI7Ebconsn1R5c"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyA8hsBzXC2XahwLAtKvYHI7Ebconsn1R5c"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
 <body>
